--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 6060
 DEV_MODE = development
-MONGO_URL = mongodb+srv://Editor:ckHH4pthDOisUmXt@cluster0.irk8bbq.mongodb.net/ecommerce
+MONGO_URL = mongodb+srv://dbUser4218:dbUserPassword4218@cluster4218.k7y50.mongodb.net/?retryWrites=true&w=majority&appName=Cluster4218
 JWT_SECRET = HGFHGEAD12124322432
 BRAINTREE_MERCHANT_ID = hmrc3kfrt2xrvtvp
 BRAINTREE_PUBLIC_KEY = d3rnqcjwn7zk4fpt
