--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
     "react-icons": "^5.0.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
