--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
+    "ecom": "file:",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -34,18 +35,15 @@
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@playwright/test": "^1.44.0",
+    "@types/node": "^20.12.12",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-
-    "@playwright/test": "^1.44.0",
-    "@types/node": "^20.12.12",
-
     "sonarqube-scanner": "^3.3.0"
   },
   "jest": {
