--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,12 +20,27 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v4
+    # Checkout the repository code
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    # Set up Node.js environment
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+
+    # Install backend dependencies
+    - name: Install backend dependencies
+      run: npm ci
+
+    # Install frontend dependencies
+    - name: Install frontend dependencies
+      run: npm ci --prefix ./client
+
+    # Build
     - run: npm run build --if-present
+
+    # Test
     - run: npm test
