--- a/client/package.json
+++ b/client/package.json
@@ -45,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sonar-scanner": "^3.1.0",
+    "sonarqube-scanner": "^4.2.5"
   }
 }
