--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "mongodb-memory-server": "^10.1.2",
     "sonar-scanner": "^3.1.0",
-    "sonarqube-scanner": "^3.5.0"
+    "sonarqube-scanner": "^3.5.0",
+    "supertest": "^7.0.0"
   },
   "jest": {
     "verbose": true,
