--- a/package.json
+++ b/package.json
@@ -1,57 +1,70 @@
 {
-  "name": "ecom",
-  "version": "1.0.0",
-  "description": "ecommerce rest api",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "sonarqube": "sonarqube-scanner",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:frontend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest-frontend.config.cjs",
-    "test:backend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest-backend.config.cjs"
-  },
-  "keywords": [],
-  "author": "RP",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "braintree": "^3.22.0",
-    "colors": "^1.4.0",
-    "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
-    "date-fns": "^3.3.1",
-    "dotenv": "^16.4.1",
-    "ecom": "file:",
-    "express": "^4.18.2",
-    "express-formidable": "^1.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.3",
-    "react-icons": "^5.0.1",
-    "slugify": "^1.6.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@playwright/test": "^1.44.0",
-    "@types/node": "^20.12.12",
-    "babel-jest": "^29.7.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "sonarqube-scanner": "^3.3.0"
-  },
-  "jest": {
-    "verbose": true,
-    "projects": [
-      "./jest-backend.config.cjs",
-      "./jest-frontend.config.cjs"
-    ]
-  }
+    "name": "ecom",
+    "version": "1.0.0",
+    "description": "ecommerce rest api",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "server": "nodemon server.js",
+        "client": "npm start --prefix ./client",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "sonarqube": "sonarqube-scanner",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test:frontend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest-frontend.config.cjs",
+        "test:backend": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config jest-backend.config.cjs",
+        "prepare:module": "mv package.json package.commonjs.json && mv package.module.json package.json",
+        "restore:commonjs": "mv package.json package.module.json && mv package.commonjs.json package.json",
+        "test:ui": "npm run prepare:module && npx playwright test && npm run restore:commonjs"
+    },
+    "keywords": [],
+    "author": "RP",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "braintree": "^3.22.0",
+        "colors": "^1.4.0",
+        "concurrently": "^8.2.2",
+        "cors": "^2.8.5",
+        "date-fns": "^3.3.1",
+        "dotenv": "^16.4.1",
+        "ecom": "file:",
+        "express": "^4.18.2",
+        "express-formidable": "^1.2.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.3.0",
+        "mongoose": "^8.1.2",
+        "morgan": "^1.10.0",
+        "nodemon": "^3.0.3",
+        "react-icons": "^5.0.1",
+        "slugify": "^1.6.6"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.24.5",
+        "@babel/preset-env": "^7.24.5",
+        "@babel/preset-react": "^7.24.1",
+        "@playwright/test": "^1.44.0",
+        "@types/node": "^20.12.12",
+        "axios-mock-adapter": "^2.1.0",
+        "babel-jest": "^29.7.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "mongodb-memory-server": "^10.1.2",
+        "mongoose-mock": "^0.4.0",
+        "sonarqube-scanner": "^3.3.0",
+        "supertest": "^7.0.0"
+    },
+    "jest": {
+        "verbose": true,
+        "projects": [
+            "./jest-backend.config.cjs",
+            "./jest-frontend.config.cjs"
+        ],
+        "collectCoverage": true,
+        "coverageDirectory": "./coverage",
+        "coverageReporters": [
+            "text",
+            "lcov"
+        ]
+    }
 }
