Add properties for SonarQube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # SonarQube server settings
 sonar.host.url=http://localhost:9000
-sonar.token=sqp_f8925cbd8654956df06bef97340260ae34c530f3
+sonar.token=sqa_738409e60f8cf7fff3fd9257ccd96c3d8a1b9f52
 
 # Project identification
 sonar.projectKey=econ
@@ -8,4 +8,6 @@ sonar.projectName=econ
 sonar.projectVersion=1.0
 
 # Analysis settings
-sonar.sources=client
+sonar.sources=.
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
